--- a/ltam/modules/web/src/main/webapp/pages/consumer/address.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/address.xhtml
@@ -24,7 +24,7 @@
 
                 <div class="Container100">
                     <div class="ContainerIndent">
-                        <p:panel id="addressPanel" style="border: 0px; background: transparent" styleClass="FormContent">
+                        <p:panel id="addressPanel" style="border: 0px; background: transparent">
                             <div class="Container80">
                                 <div class="Container100 MarTop5">
                                     <div class="Container100 MarTop10">
@@ -94,10 +94,76 @@
                                         </p:inputText>
                                     </div>
                                 </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100">
+                                    <h4>Contact Info</h4>
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100 MarTop5">
+                                    <div class="Container10">
+                                        <p:outputLabel styleClass="Wid90"
+                                                     value="Email">
+                                        </p:outputLabel>
+                                    </div>
+                                    <div class="Container40">
+                                        <p:inputText styleClass="Wid90" placeholder="Email"
+                                                     value="#{ctob.accountdata.email}">
+                                        </p:inputText>
+                                    </div>
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100 MarTop5">
+                                    <div class="Container10">
+                                        <p:outputLabel styleClass="Wid90"
+                                                       value="Phone#">
+                                        </p:outputLabel>
+                                    </div>
+                                    <div class="Container40">
+                                        <p:inputMask styleClass="Wid90" placeholder="PrimaryPhone#"
+                                                     value="#{ctob.accountdata.primaryPhoneNbr}"
+                                                     mask="(999) 999-9999">
+                                        </p:inputMask>
+                                    </div>
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100 MarTop5">
+                                    <div class="Container10">
+                                        <p:outputLabel styleClass="Wid90"
+                                                       value="Work#">
+                                        </p:outputLabel>
+                                    </div>
+                                    <div class="Container40">
+                                        <p:inputMask styleClass="Wid90" placeholder="WorkPhone#"
+                                                     value="#{ctob.accountdata.workPhoneNbr}"
+                                                     mask="(999) 999-9999">
+                                        </p:inputMask>
+                                    </div>
+                                    <div class="Container10">
+                                        <p:outputLabel styleClass="Wid90"
+                                                       value="Fax#">
+                                        </p:outputLabel>
+                                    </div>
+                                    <div class="Container40">
+                                        <p:inputMask styleClass="Wid90" placeholder="WorkPhone#"
+                                                     value="#{ctob.accountdata.faxNbr}"
+                                                     mask="(999) 999-9999">
+                                        </p:inputMask>
+                                    </div>
+                                </div>
                             </div>
 
                         </p:panel>
                     </div>
+                </div>
+
+                <div class="Container100">
+                  <div class="ContainerIndent">
+                      <div class="TexAlCenter">
+                      <p:commandButton value="Save"
+                                       update="@form"
+                                       actionListener="#{ctob.saveAddress}"/>
+                      </div>
+                  </div>
                 </div>
             </h:form>
         </div>
