--- a/ltam/modules/web/src/main/webapp/pages/consumer/cedit.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/cedit.xhtml
@@ -7,6 +7,7 @@
                 template="/template/common/template.xhtml">
 
 <f:metadata>
+    <f:viewParam name="act" value="#{ceb.beanaction}"/>
     <f:viewParam name="acctnum" value="#{ceb.beanacctnum}"/>
     <f:event type="preRenderView" listener="#{ceb.preRenderView}"/>
 </f:metadata>
@@ -21,8 +22,8 @@
         <div class="layout-portlets-box">
 
 
-            <div class="Container100 Responsive100 ">
-                <div class="ContainerIndent Responsive100 tab_main">
+            <div class="Container100 Responsive100">
+                <div class="ContainerIndent tab_main">
 
                     <p:steps id="ltamprogressbar" activeIndex="#{ceb.ltammenu}">
                         <p:menuitem value="Start"/>
@@ -42,11 +43,18 @@
                 </div>
             </div>
 
-            <div class="Container100 Responsive100">
-                <div class="Container50 Responsive100">
+            <div class="Container50">
                     <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
                         <ui:fragment rendered="#{ceb.pagemanager.page == 0}">
-                            <ui:include src="/pages/consumer/edit/page1.xhtml"/>
+                           <ui:fragment rendered="#{ceb.isEditMode}">
+                               <ui:include src="/pages/consumer/edit/page1B.xhtml"/>
+                           </ui:fragment>
+                            <ui:fragment rendered="#{ceb.isTimeToSaveMode}">
+                                <ui:include src="/pages/consumer/edit/page1A.xhtml"/>
+                            </ui:fragment>
+                            <ui:fragment rendered="#{ceb.isVisitorMode}">
+                                <ui:include src="/pages/consumer/edit/page1.xhtml"/>
+                            </ui:fragment>
                         </ui:fragment>
                         <ui:fragment rendered="#{ceb.pagemanager.page == 1}">
                             <ui:include src="/pages/consumer/edit/page2.xhtml"/>
@@ -64,110 +72,10 @@
                             <ui:include src="/pages/consumer/edit/page6.xhtml"/>
                         </ui:fragment>
                    </p:panel>
+                <div class="Container50">
+                    <ui:include src="/pages/consumer/edit/rightpanel.xhtml"/>
                 </div>
 
-
-                <div class="Container50 Responsive100">
-                    <div class="ContainerIndent">
-                        <p:panel id="graphArea" style="border: 0px; background: transparent"
-                                 rendered="#{ceb.displayGraphs}">
-                            <div class="EmptyBox5"></div>
-                            <div class="Container100 Responsive100">
-                                <p:panel style="border: 0px; background: transparent"
-                                         rendered="#{ceb.displayMeter}">
-                                    <div class="EmptyBox5"></div>
-                                    <div class="Container100 Responsive100">
-                                        <table style="width: 100%">
-                                            <tr>
-                                                <td colspan="3">
-                                                    <div class="TexAlCenter title1">
-                                                        Your current risk level is
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3">
-                                                    <div class="EmptyBox5"></div>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="width: 10%; text-align: right; vertical-align: middle">Low</td>
-                                                <td style="width: 80%; text-align: center; vertical-align: middle">
-                                                    <ui:repeat var="tlist" value="#{ceb.themeList}">
-                                                        <h:graphicImage name="images/riskMeter.svg" library="ltam"
-                                                                        rendered="#{ceb.themeData.sortorder != tlist.sortorder}"
-                                                                        style="width: 20%; background: transparent"
-                                                                        styleClass="Fleft"/>
-                                                        <h:graphicImage name="images/SriskMeter.svg" library="ltam"
-                                                                        rendered="#{ceb.themeData.sortorder == tlist.sortorder}"
-                                                                        style="width: 20%; background: transparent"
-                                                                        styleClass="Fleft"/>
-                                                    </ui:repeat>
-                                                </td>
-                                                <td style="width: 5%; text-align: left; vertical-align: middle">High</td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                </p:panel>
-
-                            </div>
-                            <div class="Container100 Responsive100">
-                                <div class="EmptyBox10"></div>
-                                <div class="Container100 Responsive100">
-                                    <p:outputPanel id="charts" style="border: 0px; background: transparent">
-                                        <p:panel style="border: 0px; background: transparent"
-                                                 rendered="#{ceb.reviewPage ? 'false' : 'true'}">
-                                            <div class="Container100  Fleft">
-                                                <div class="ContainerIndent">
-                                                    <p:outputPanel deferred="true">
-                                                        <p:chart type="pie" model="#{ceb.ltamcharts.pieChart}"
-                                                                 rendered="#{ceb.ltamcharts.pieChart != null}"
-                                                                 style="width:100%;height:210px;"
-                                                                 extender="ltam_pie"
-                                                                 responsive="true">
-                                                        </p:chart>
-                                                    </p:outputPanel>
-                                                </div>
-                                            </div>
-                                        </p:panel>
-                                        <p:panel style="border: 0px; background: transparent"
-                                                 rendered="#{ceb.reviewPage}">
-                                            <div class="Container100 Fleft">
-                                                <div class="ContainerIndent">
-                                                    <p:dataTable styleClass="invAllocTable"
-                                                                 value="#{ceb.allocationData.ltamAllocatedAssetList}"
-                                                                 var="allocatedList" reflow="true">
-
-                                                        <p:column style="width: 2%; background-color: #{allocatedList.color};">
-                                                            <h:outputText value=" "/>
-                                                        </p:column>
-
-                                                        <p:column styleClass="Wid40 TexAlLeft"
-                                                                  resizable="true" headerText="Asset">
-                                                            <h:outputText value="#{allocatedList.displayname}"/>
-                                                        </p:column>
-                                                        <p:column styleClass="Wid20 TexAlRight"
-                                                                  resizable="true" headerText="Weight">
-                                                            <h:outputText value="#{allocatedList.weightAsPercent}">
-                                                                <f:convertNumber pattern="##0%"/>
-                                                            </h:outputText>
-                                                        </p:column>
-                                                        <p:column styleClass="Wid30 TexAlRight"
-                                                                  resizable="true" headerText="Value">
-                                                            <h:outputText value="#{allocatedList.money}">
-                                                                <f:convertNumber currencySymbol="$" type="currency"/>
-                                                            </h:outputText>
-                                                        </p:column>
-                                                    </p:dataTable>
-                                                </div>
-                                            </div>
-                                        </p:panel>
-                                    </p:outputPanel>
-                                </div>
-                            </div>
-                        </p:panel>
-                    </div>
-                </div>
             </div>
         </div>
 
