--- a/ltam/modules/web/src/main/webapp/pages/common/myprofile.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/common/myprofile.xhtml
@@ -98,44 +98,48 @@
                             </p:tab>
                             <p:tab title="User Profile">
                                 <p:panel style="border: 0px; height: 340px;">
-                                    <div class="Container60 Responsive50">
-                                        <p:panelGrid id="security" columns="2" layout="grid"
-                                                     style="border:0px !important; padding: 5px !important; background:none;"
-                                                     class="FormContent">
-                                            <h:outputText value="User ID" styleClass="Wid90"/>
-                                            <h:outputText value="#{profileBean.userData.userID}" styleClass="Wid90 Fs16"/>
-                                            <p:spacer width="1"/>
+                                    <div class="Container100">
+                                        <div class="Container60">
+                                            <p:panelGrid id="security" columns="3" layout="grid"
+                                                         style="border:0px !important; padding: 10px !important; background:none;"
+                                                         class="FormContent">
+                                                <h3>User ID</h3>
+                                                <h:outputText value="#{profileBean.userData.userID}" styleClass="Wid90 Fs16"
+                                                        style="font-weight: bold; margin-left: 7px"/>
+                                                <p:spacer width="1"/>
 
-                                            <h:outputText value="Email" styleClass="Wid90"/>
-                                            <p:inputText value="#{profileBean.userData.email}" styleClass="Wid90"
-                                                         required="true" requiredMessage="Email must be defined."/>
-                                            <p:spacer width="1"/>
+                                                <h:outputText value="Email" styleClass="Wid90"/>
+                                                <p:inputText value="#{profileBean.userData.newemail}" styleClass="Wid90"
+                                                             required="true" requiredMessage="Email must be defined."/>
+                                                <p:spacer width="1"/>
 
-                                            <h:outputText value="Password" styleClass="Wid90"/>
-                                            <p:password id="pwd1" value="#{profileBean.password}"
-                                                        styleClass="Wid90" placeholder="New Password"
-                                                        match="pwd2" label="Password">
-                                            </p:password>
-                                            <p:commandButton id="pwdHelp"
-                                                             icon="fa fa-question-circle white"
-                                                             value="Help" process="@none"/>
+                                                <h:outputText value="Password" styleClass="Wid90"/>
+                                                <p:password id="pwd1" value="#{profileBean.password}"
+                                                            styleClass="Wid90" placeholder="New Password"
+                                                            match="pwd2" label="Password">
+                                                </p:password>
+                                                <p:commandButton id="pwdHelp"
+                                                                 icon="fa fa-question-circle white"
+                                                                 value="Help" process="@none"/>
 
-                                            <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade" dynamic="false"
-                                                            showCloseIcon="true"
-                                                            style="width:300px">
-                                                Password Must contain a minimum of 8 Characters including at least:
-                                                <ul>
-                                                    <li>1 uppercase letter</li>
-                                                    <li>1 number</li>
-                                                    <li>1 of these special characters: !,#,$,%,?</li>
-                                                </ul>
-                                            </p:overlayPanel>
 
-                                            <h:outputText value="Confirm Password" styleClass="Wid90"/>
-                                            <p:password id="pwd2" value="#{profileBean.confirmPassword}" styleClass="Wid90"
-                                                        placeholder="Confirm Password"/>
-                                            <p:spacer width="1"/>
-                                        </p:panelGrid>
+                                                <h:outputText value="Confirm Password" styleClass="Wid90"/>
+                                                <p:password id="pwd2" value="#{profileBean.confirmPassword}" styleClass="Wid90"
+                                                            placeholder="Confirm Password"/>
+                                                <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade" dynamic="false"
+                                                                showCloseIcon="true"
+                                                                style="width:300px">
+                                                    Password Must contain a minimum of 8 Characters including at least:
+                                                    <ul>
+                                                        <li>1 uppercase letter</li>
+                                                        <li>1 number</li>
+                                                        <li>1 of these special characters: !,#,$,%,?</li>
+                                                    </ul>
+                                                </p:overlayPanel>
+
+                                            </p:panelGrid>
+                                        </div>
+
                                     </div>
                                     <div class="EmptyBox50"/>
                                     <f:facet name="footer">
